2008-11-06  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/globals_zero.hpp
	(StackShadowPages): Increase for debug builds.

2008-11-06  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/cppInterpreter_zero.cpp
	(CppInterpreter::native_entry): Unwind correctly if an
	exception is thrown while setting up the call.

2008-11-06  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/cppInterpreter_zero.cpp
	(CppInterpreter::native_entry): Add stack overflow check.

2008-11-06  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/cppInterpreter_zero.hpp
	(CppInterpreter::stack_overflow_imminent): New method.

	* ports/hotspot/src/cpu/zero/vm/cppInterpreter_zero.cpp
	(CppInterpreter::stack_overflow_imminent): New method.
	(CppInterpreter::normal_entry): Add stack overflow check.

2008-11-05  Deepak Bhole  <dbhole@redhat.com>

	* patches/icedtea-copy-plugs.patch: Add netscape.* classes to rt.jar when
	building with an alternate jar application.

2008-11-05  Deepak Bhole  <dbhole@redhat.com>

	* rt/net/sourceforge/jnlp/runtime/JNLPClassLoader.java: Correct
	indentation from last commit, remove debug output.

2008-11-05  Andrew Haley  <aph@redhat.com>
	    Gary Benson  <gbenson@redhat.com>

	* contrib/mixtec-hacks.patch: new file.

2008-11-04  Deepak Bhole  <dbhole@redhat.com>

	* rt/net/sourceforge/jnlp/runtime/JNLPClassLoader.java: Dynamically load
	files from the index.

2008-11-04  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkRuntime.hpp
	(SharkRuntime::_f2i): New constant.
	(SharkRuntime::_f2l): Likewise.
	(SharkRuntime::_d2i): Likewise.
	(SharkRuntime::_d2l): Likewise.
	(SharkRuntime::f2i): New accessor.
	(SharkRuntime::f2l): Likewise.
	(SharkRuntime::d2i): Likewise.
	(SharkRuntime::d2l): Likewise.
	* ports/hotspot/src/share/vm/shark/sharkRuntime.cpp
	(SharkRuntime::_f2i): New constant.
	(SharkRuntime::_f2l): Likewise.
	(SharkRuntime::_d2i): Likewise.